# phylo-rs

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: main.rs
comparison/: README.md  build.sh  measure-mem.sh  measure-time.sh  plot-memory-scalability.py  plot-runtime-scalability.py
comparison/ape/mem/: ape-read-newick.r
comparison/ape/time/: ape-lca.r  ape-rfs.r
comparison/compacttree/: CompactTree-read-newick.cpp  CompactTree-traverse.cpp
comparison/dendropy/mem/: dendropy-read-newick.py
comparison/dendropy/time/: dendropy-contract.py  dendropy-lca.py  dendropy-rfs.py  dendropy-traverse.py
comparison/genesis/src/: genesis-read-newick.cpp  genesis-traverse.cpp
comparison/gotree/: go.mod  go.sum  gotree-lca.go  gotree-read-newick.go  gotree-traverse.go  gotree-yts.go
comparison/treeswift/: treeswift-contract.py  treeswift-lca.py  treeswift-runtimes.py  treeswift-traverse.py
comparison/treeswift/time/: treeswift-lca.py  (+2 more)
examples/: pairwise-distances.rs  phylo-rs-contract.rs  phylo-rs-lca.rs  phylo-rs-nni.rs  phylo-rs-read-newick.rs  phylo-rs-rfs.rs  phylo-rs-traverse.rs  phylo-rs-yts.rs  phylogenetic-diversity.rs  phylotree-lca.rs  phylotree-read-newick.rs  phylotree-rfs.rs  phylotree-traverse.rs  phylotree-yts.rs
src/: alphabet.rs  bin.rs  error.rs  iter.rs  lib.rs  node.rs  tree.rs
src/experiments/: dfs_tree.rs  mod.rs  simple_tree.rs
src/iter/: lca.rs  node_iter.rs
src/models/: gamma.rs  gtr.rs  mod.rs  rate_matrix.rs
src/node/: simple_rnode.rs
src/tree/: asr.rs  distances.rs  io.rs  likelihood.rs  newick.rs  ops.rs  simple_rtree.rs  stats.rs
tests/: memory-report.rs  node-tests.rs  tree-tests.proptest-regressions  tree-tests.rs
(+10 files in other folders)
