[package]
name = "phylo"
version = "5.0.0"
edition = "2021"
rust-version = "1.87"

authors = ["Sriram Vijendran"]
license = "MIT"

repository = "https://github.com/sriram98v/phylo-rs"
readme = "README.md"

description = "An extensible Phylogenetics library written in rust"

keywords = ["bioinformatics", "phylogenetics"]
categories = ["data-structures", "science"]

# Keep files that are not part of the crate out of the published package.
exclude = [
    # Claude Code project files: developer tooling, not library content.
    "/CLAUDE.md",
    "/.claude",
    # Benchmark harness for comparing against other tools -- data dumps, other
    # tools' binaries, a git submodule. Over 1300 files, none of them the crate.
    "/comparison",
    # Repository and CI plumbing, useful only when developing phylo itself.
    "/.github",
    "/.gitignore",
    "/.git-blame-ignore-revs",
    # Its only entry lived under comparison/, so it now points at nothing shipped.
    "/.gitmodules",
]

[lib]
name = "phylo"
path = "src/lib.rs"

[features]
default = ["non_crypto_hash", "simple_rooted_tree"]
non_crypto_hash = ["dep:fxhash"]
simple_rooted_tree = []
parallel = ["dep:rayon"]
serde = ["dep:serde", "vers-vecs/serde"]

[dependencies]
itertools = "0.11.0"
num = "0.4.1"
rand = "0.8.5"
fxhash = { version = "0.2.1", optional = true }
vers-vecs = "1.5.1"
serde = { version = "1", features = ["derive", "rc"], optional = true }
thiserror = "1.0.65"
rayon = { version = "1.10.0", optional = true }
indicatif = "0.17.11"
getrandom = { version = "0.2", features = ["js"] }
num-traits = "0.2"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

[dev-dependencies]
divan = "0.1.14"
phylotree = "0.1.3"
serde_json = "1"
proptest = "1.4"

[[bench]]
name = "main"
harness = false